# sgl-kernel-npu

csrc/deepep/: deep_ep.cpp  deep_ep.hpp
csrc/deepep/ops/op_kernel/: dispatch_layout.h  shmem_moe_combine_normal.h  shmem_notify_dispatch.h
deepep_standalone/: CMakeLists.txt  README.md  build.sh
deepep_standalone/csrc/deepep/: deep_ep.cpp  deep_ep.hpp  pybind_extension.cpp
deepep_standalone/csrc/deepep/ops/op_kernel/: dispatch_layout.h  shmem_moe_dispatch_normal.h  shmem_notify_dispatch.h  shmem_sync_flag.h
deepep_standalone/python/deep_ep/deep_ep/: buffer.py
deepep_standalone/tools/: gen_shmem_calculator.py  shmem_calculator.xlsx
docs/: shmem_handover.md
tests/python/deepep/: hccl_dispatcher.py  test_fixed_dispatch.py  test_intranode_direct.py  test_shmem_intranode.py  utils.py
